# codespawner-api

./: .gitignore  README.md  go.mod  go.sum  main.go  run-all.py.sample  setup-conf.sh
code-runner/: .env.sample  .gitignore  Cargo.toml  README.md  build.rs  nginx.conf.sample
code-runner/migrations/2020-02-14-170028_users_code/: down.sql  up.sql
code-runner/proto/: runner.proto
code-runner/src/: models.rs  schema.rs  server.rs
gql/: queries.go  resolvers.go  types.go
hurdle/: .gitignore  README.md  go.mod  main.go  nginx.conf.sample  schema.graphql
logs/: nginx.conf
postgres/: postgres.go
postgres/sql/: 1-create-database.sql
root/: .air.conf.sample  .env.sample  .gitignore  generated.go  go.mod  go.sum  gqlgen.yml  main.go  models_gen.go  nginx.conf.sample  resolver.go  schema.graphql
root/api/: gql.go  queries.go  resolvers.go  types.go
root/config/: conf.json.sample
root/graphql/: generated.go  models_gen.go  mutation_resolver.go  query_resolver.go  resolver.go
root/middleware/: auth-middleware.go
root/models/: models_gen.go  postgres.go  user.go
root/postgres/: users.go
root/server/: main.go  server.go
server/: server.go
sql/: 1-create-database.sql  2-code-runner.sql
