[package]
name = "code-runner"
version = "0.1.0"
authors = ["iamsaquib <saquibulhassan6@gmail.com>"]
edition = "2018"

[[bin]]
name = "runner-server"
path = "src/server.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = { version = "0.1.1", features = ["tls"] }
prost = "0.6"
tokio = { version = "0.2", features = ["rt-threaded", "time", "stream", "fs", "macros", "uds"] }
futures = { version = "0.3", default-features = false, features = ["alloc"] }
async-stream = "0.2"
tower = "0.3"
# Required for routeguide
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "1.4.3", features = ["postgres", "chrono", "uuid"] }
dotenv = "0.10"
uuid = { version = "0.6.0", features = ["serde", "v4"] }
chrono = { version = "0.4.10", features = ["serde"] }

[build-dependencies]
tonic-build = "0.1.1"
